...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/restore_db_from_drive_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/restore_db_from_drive_lbl"
                    android:layout_width="wrap_content"
...
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/restore_database_from_drive"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Button
                    android:id="@+id/restore_db_from_drive_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/standard_button_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/restore"/>
...
