...
    <string name="location_asc">Location ascending</string>
    <string name="location_desc">Location descending</string>
    <string name="log_gps_points">Log GPS points</string>
    <string name="log_interval">Log Interval (seconds)</string>
    <string name="longitude">Longitude</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu_start_activity">Start Activity</string>
    <string name="main_menu_list_prior_activities">List Prior Activities</string>
    <string name="main_menu_activity_history">History</string>
    <string name="main_menu_exercise_setup">Exercise Setup</string>
    <string name="main_menu_program_options">Options</string>
    <string name="main_menu_about_activity_tracker">About ActivityTracker</string>
    <string name="map">Map</string>
...
    <string name="no">No</string>
    <string name="no_activities_to_display">No activities to display</string>
    <string name="no_activities_to_chart">No activities to chart</string>
    <string name="no_activities_found_for_time_period_selected">No activities found for time period selected</string>
    <string name="normal">Normal</string>
    <string name="number_gps_points"># GPS Points</string>
    <string name="ok">OK</string>
    <string name="error_reading_exercise_record">Oops. Error reading exercise record!</string>
    <string name="overall_altitude_change">Overall Altitude Change</string>
    <string name="pausing_activity">Pausing activity</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="post_image">Post image</string>
    <string name="post_photos">Post photos</string>
...
    <string name="press_yes_to_delete_selected_activities_or_no_to_cancel">Press Yes to delete the selected activities or No to cancel.</string>
    <string name="press_yes_to_delete_GPS_delail_or_no_to_cancel">Press YES to delete GPS trace(s) or No to cancel.</string>
    <string name="rack_up_the_miles">Rack up the miles!</string>
    <string name="reenter_location_for_activity">Reenter the location for the Activity</string>
    <string name="review_exercise">Review Exercise</string>
    <string name="restart">Restart</string>
    <string name="restore">Restore</string>
    <string name="restore_file_will_be_read_from_above_backup_location">Restore file will be read from above backup location.</string>
    <string name="restore_database">Restore Database</string>
    <string name="restore_cancelled">Restore cancelled</string>
    <string name="satellite">Satellite</string>
    <string name="satellite_plus_streets">Satellite plus Streets</string>
    <string name="save">Save</string>
...
    <string name="save_your_changes">Save your changes</string>
    <string name="sec">sec</string>
    <string name="setup_activity">Setup Activity</string>
    <string name="setup_exercise">Setup Exercise</string>
    <string name="show_statistics">Show Statistics</string>
    <string name="sort">Sort</string>
    <string name="start">Start</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="start_activity">Start Activity</string>
    <string name="start_log">Start Log</string>
    <string name="stop">Stop</string>
    <string name="stop_activity">Stop Activity</string>
    <string name="stop_exercise">Stop Exercise</string>
...
    <string name="action_start_activity">Start Activity</string>
    <string name="action_history">History</string>
    <string name="action_exercise_setup">Exercise Setup</string>
    <string name="action_options">Options</string>
    <string name="action_restore_db">Restore</string>
    <string name="action_about">About</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="settings">Settings</string>

    <!-- Preference screen -->
    <string name="startup_image" translatable="false">startup_image</string>
    <string name="select_startup_background">Startup screen photo</string>
...
    <string name="error_playing_media_file">Error playing media file %1$s.</string>
    <string name="hours_and_minutes">%d %s  %d %s</string>
    <string name="hrs">hrs</string>
    <string name="mins">mins</string>

    <string name="select_startup_photo">Hi There!\nYou can display your own photo on startup. Would you like to do that now?</string>
    <string name="select_startup_photo_later">Select later</string>
    <string name="default_photo_display">OK. I am going to display a photo hopefully to help inspire you. You can switch this to your own photo by selecting Settings/Startup Screen Photo"</string>
    <string name="min_altitude">Min. Altitude</string>
    <string name="max_altitude">Max. Altitude</string>
    <string name="current_altitude">Current Altitude</string>
    <string name="database_not_successfully_reopened">Database not successfully (re)opended.</string>
    <string name="start_altitude">Start Altitude</string>
...
