<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_margin="@dimen/margin_double"
              android:orientation="vertical"
             >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/start_exercise_rl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_double">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/location"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <AutoCompleteTextView
                    android:id="@+id/start_exercise_actvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:layout_marginLeft="@dimen/margin_double"
                    android:layout_toRightOf="@+id/textView3"
                    android:hint="@string/where_are_we"
                    android:textAppearance="?android:attr/textAppearanceMedium">

                    <requestFocus/>
                </AutoCompleteTextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/start_exercise_rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_double">

                <TextView
                    android:id="@+id/start_exercise_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/exercise"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <!-- android:textColor="@android:color/primary_text_light" -->

                <Spinner
                    android:id="@+id/start_exercise_spnrExercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_double"
                    android:layout_toRightOf="@+id/start_exercise_tv"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_double">

                <TextView
                    android:id="@+id/start_exercise_lblAdditionalInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/additional_activity_info"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/start_exercise_additional_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/start_exercise_lblAdditionalInfo"
                    android:hint="@string/additional_activity_hint"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/ts20sp">

                <Button
                    android:id="@+id/start_exercise_btnStart"
                    style="@style/standard_button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/start"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>