<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_airport_weather_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fisincorporated.exercisetracker.ui.startup.ExerciseDrawerActivity">

    <TextView
...
        android:adjustViewBounds="true"
        android:contentDescription="@string/startup_photo"
        />
   <!-- </ScrollView> -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/startup_photo_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_directions_run"
        app:backgroundTint="@color/fab_background_white"
...
